# object-and-action-detection

./: .env.example  .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: cameras.py  events.py  schemas.py  websocket.py
backend/app/core/: frame_processor.py  ring_buffer.py  state_machine.py  video_capture.py
backend/app/detection/: llm_detector.py  movenet_detector.py  overlay.py  yolo_detector.py
backend/app/services/: camera_manager.py  event_service.py
backend/data/: factory.db
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/locales/: en.json  jp.json
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
frontend/src/components/: ActionStatusCard.tsx  LiveActionFeed.tsx  VideoPlayer.tsx
frontend/src/hooks/: useCameras.ts  useEvents.ts  useWebSocket.ts
frontend/src/pages/: EventDetail.tsx  Events.tsx  LiveMonitoring.tsx
frontend/src/store/: index.ts
