[project]
name = "factory-action-console"
version = "1.0.0"
description = "Real-time worker hydration action detection for industrial automation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "opencv-python-headless>=4.9.0.80",
    "numpy>=1.26.4",
    "openai>=1.12.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.26.0",
    "pillow>=10.2.0",
    "ultralytics>=8.4.0",
    "greenlet>=3.0.0",
    "lap>=0.5.12",
    "ai-edge-litert>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
